--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   "content_scripts": [
     {
       "matches": ["*://*.kinopoisk.ru/*"],
-      "js": ["js/kinopoisk/kinopoisk.js"]
+      "js": ["js/kinopoisk/buttons.js", "js/kinopoisk/kinopoisk.js"]
     },
     {
       "matches": ["*://*.flcksbr.top/*"],
